# gcal_notifier

./: .gitignore  LICENSE.md  Pipfile  README.md  gcal_init.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
gcal_notifier/: cli.py  config_reader.py  event_getter.py  event_loader.py  event_printer.py  event_reminder.py  event_saver.py  globals.py  main.py  tabulate.py  utils.py
