[tool.poetry]
name = "gcal_notifier"
version = "1.0.4"
description = "A simple and lightweight GoogleCalendar notifier for Linux"
authors = ["Thales Nunes <thalesaknunes22@gmail.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/thalesnunes/SimpleGCalendarNotifier"

classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.6"

gcsa = "^1.2.0"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
gcal_notifier = "gcal_notifier.main:gcal_notifier"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
