[tool.poetry]
name = "gcal_notifier"
version = "1.1.7"
description = "A simple and lightweight GoogleCalendar notifier for Linux"
authors = ["Thales Nunes <thalesaknunes22@gmail.com>"]
license = "MIT"

readme = "README.md"

repository = "https://github.com/thalesnunes/gcal_notifier"

classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.6.2"

gcsa = "^1.2.0"
simpleaudio = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
isort = "^5.9.3"
black = "^21.9b0"

[tool.poetry.scripts]
gcal_notifier = "gcal_notifier.main:gcal_notifier"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[tool.black]
line-length = 80
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
