[project]
name = "gcal_notifier"
version = "1.1.7"
description = "A simple and lightweight GoogleCalendar notifier for Linux"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
authors = [
    { name = "Thales Nunes", email = "thalesaknunes22@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gcsa>=1.2.0",
    "simpleaudio>=1.0.4",
]

[project.urls]
Repository = "https://github.com/thalesnunes/gcal_notifier"

[project.scripts]
gcal_notifier = "gcal_notifier.main:gcal_notifier"

[dependency-groups]
dev = [
    "pytest>=6.2.5",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (bugs/logic errors)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common design issues)
    "UP",  # pyupgrade (keeps syntax modern)
    "C4",  # flake8-comprehensions
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501", # Line too long (Ruff formatter handles this, no need to be strict)
]

[tool.ruff.lint.isort]
combine-as-imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
